--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -13,7 +13,7 @@
       <header>
         <div>
           <a href="{{ url_for('blog.view', id=post['id']) }}"><h1>{{ post['title'] }}</h1></a>
-          <div class="about">por {{ post['username'] }} em {{ post['created'].strftime('%d-%m-%Y') }}</div>
+          <div class="about">por {{ post['username'] }} em {{ post['created'].strftime('%Y-%m-%d') }}</div>
           <div class="about"> likes: {{ post['likes'] }}</div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
